--- a/data/ui/views/sandfly_user_activity_aging.xml
+++ b/data/ui/views/sandfly_user_activity_aging.xml
@@ -47,10 +47,9 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | stats count as total_users
+            | stats count
           </query>
         </search>
-        <option name="colorMode">block</option>
       </single>
     </panel>
 
@@ -60,13 +59,12 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S")
+            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval days_since_login=(now()-last_login_epoch)/86400
             | where days_since_login <= 30
             | stats count
           </query>
         </search>
-        <option name="colorMode">block</option>
       </single>
     </panel>
 
@@ -76,13 +74,12 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S")
+            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval days_since_login=(now()-last_login_epoch)/86400
             | where days_since_login > 30 AND days_since_login <= 90
             | stats count
           </query>
         </search>
-        <option name="colorMode">block</option>
       </single>
     </panel>
 
@@ -92,13 +89,12 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S")
+            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval days_since_login=(now()-last_login_epoch)/86400
             | where days_since_login > 90
             | stats count
           </query>
         </search>
-        <option name="colorMode">block</option>
       </single>
     </panel>
 
@@ -112,7 +108,6 @@ KEY QUESTIONS ANSWERED
             | stats count
           </query>
         </search>
-        <option name="colorMode">block</option>
       </single>
     </panel>
 
@@ -129,9 +124,9 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S")
+            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval days_since_login=round((now()-last_login_epoch)/86400,0)
-            | where roles="admin" AND (isnull(days_since_login) OR days_since_login > 30)
+            | where mvfind(roles,"admin")>=0 AND (isnull(days_since_login) OR days_since_login > 30)
             | table username email roles sso last_login_date days_since_login
             | sort - days_since_login
           </query>
@@ -145,7 +140,7 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | where sso=false AND (roles="admin" OR roles="api_result_read" OR roles="api_scan")
+            | where sso=false AND mvcount(roles)>0 AND mvfind(roles,"admin")>=0
             | table username email roles sso created_date last_login_date
             | sort username
           </query>
@@ -166,7 +161,7 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval created_epoch=strptime(created_date,"%Y-%m-%dT%H:%M:%S")
+            | eval created_epoch=strptime(created_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval account_age_days=round((now()-created_epoch)/86400,0)
             | eval age_bucket=case(
                 account_age_days <= 30,"0–30",
@@ -189,9 +184,9 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval created_epoch=strptime(created_date,"%Y-%m-%dT%H:%M:%S")
+            | eval created_epoch=strptime(created_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval account_age_days=(now()-created_epoch)/86400
-            | where roles="admin" AND account_age_days <= 90
+            | where mvfind(roles,"admin")>=0 AND account_age_days <= 90
             | table username email roles created_date sso
             | sort created_date
           </query>
@@ -212,8 +207,8 @@ KEY QUESTIONS ANSWERED
         <search>
           <query>
             index=* sourcetype=sandfly:users
-            | eval created_epoch=strptime(created_date,"%Y-%m-%dT%H:%M:%S")
-            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S")
+            | eval created_epoch=strptime(created_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
+            | eval last_login_epoch=strptime(last_login_date,"%Y-%m-%dT%H:%M:%S.%3NZ")
             | eval account_age_days=round((now()-created_epoch)/86400,0)
             | eval days_since_login=round((now()-last_login_epoch)/86400,0)
             | eval review_flag=case(
